--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
     "express-rate-limit": "^7.1.5",
-    "joi": "^17.11.0"
+    "joi": "^17.11.0",
+    "lucide-react": "^0.553.0",
+    "node-fetch": "^3.3.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
