--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "node server.js",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview"
   },
   "dependencies": {
     "cors": "^2.8.5",
