--- a/server/package.json
+++ b/server/package.json
@@ -18,11 +18,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.1",
     "node-fetch": "^3.3.2"
   }
 }
-
